修改一些配置

--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,7 @@ ENV = 'development'
 # base api
 VUE_APP_BASE_API = 'http://www.qingmengtech.com:8080/'
 VUE_APP_LOGIN_API = 'http://login.qingmengtech.com/'
+VUE_APP_LOGIN_API = 'http://www.qingmengtech.com:8086/'
 VUE_APP_CDN_URL = 'http://pic.qingmengtech.com:8080/'
 VUE_APP_SKILL_API = 'http://excises.qingmengtech.com'
 
